# beolux-2000

./: .gitignore  .gitmodules
Schema/: www.dropbox.com: 2.webloc  www.dropbox.com:.webloc
design_inbox/design_handoff_beoflux/: BEOFLUX 2000DL TEAC.html  README.md
output/pluginval/: Soundboys - Beolux 2000 0.1.0 - Mac OSX 15.6 AudioUnit_20260504T173511.586+0200.txt  Soundboys - Beolux 2000 0.1.0 - Mac OSX 15.6 AudioUnit_20260504T173552.358+0200.txt  Soundboys - Beolux 2000 0.1.0 - Mac OSX 15.6 VST3_20260504T173501.146+0200.txt  Soundboys - Beolux 2000 0.1.0 - Mac OSX 15.6 VST3_20260504T173551.081+0200.txt
plugin/: FIGMA_UX_PROMPT.md  README.md  UX_BRIEF.md  VALIDATION_REPORT.md  build_manual_deck.py  build_retro_deck.py  specs.md
plugin/diagrams/: blender_fader_render.py  blender_knob_render.py  blender_panel_render.py  blender_reel_render.py  render_charts.py  render_knob_filmstrip.py
plugin/dsp_prototype/: __init__.py  chain.py  demo.py  demo_full_chain.py  effects.py  eq_din1962.py  ge_stages.py  jiles_atherton.py  mixer_and_amps.py  preamps.py  process_file.py  requirements.txt  tape.py  test_chain.py  test_effects.py  test_ge_stages.py  tone_balance.py  transformer.py  validate_studio_sound.py  vu_meter.py  wow_flutter.py
plugin/juce/: CMakeLists.txt
plugin/juce/Source/: NativeEditor.cpp  NativeEditor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  WebEditor.cpp  WebEditor.h
plugin/juce/Source/assets/: README.md
plugin/juce/Source/dsp/: Constants.h  Echo.cpp  Echo.h  EqDIN1962.cpp  EqDIN1962.h  Ge2N2613Stage.cpp  Ge2N2613Stage.h  GeLowNoiseStage.cpp  GeLowNoiseStage.h  JilesAtherton.h  MicAndPower.cpp  MicAndPower.h  Multiplay.cpp  Multiplay.h  PhonoPreamp.cpp  PhonoPreamp.h  SignalChain.cpp  SignalChain.h  TapeSaturation.cpp  TapeSaturation.h  ToneAndOutput.cpp  ToneAndOutput.h  WowFlutter.cpp  WowFlutter.h
plugin/juce/Source/presets/: Presets.cpp  Presets.h
plugin/juce/Source/tests/: DspSmokeTest.cpp  preset_band_stress.py  signal_test.py  vs_studio_sound_1968.py
plugin/juce/Source/ui/: AssetRegistry.cpp  AssetRegistry.h  BC2000LookAndFeel.cpp  BC2000LookAndFeel.h  BCColours.h  BCLookAndFeel.cpp  BCLookAndFeel.h  DualSlideFader.cpp  DualSlideFader.h  HybridHeroPanel.cpp  HybridHeroPanel.h  PhotorealReel.cpp  PhotorealReel.h  PresetBrowser.cpp  PresetBrowser.h  RecordIndicator.h  TransportLever.cpp  TransportLever.h  UADStyleSelector.cpp  UADStyleSelector.h  VUMeter.cpp  VUMeter.h
plugin/mockups/: build_mockup.py
plugin/web/: beoflux.html  ferroflux.html  ferroflux.juce.html.bak
scripts/: dev-reaper.sh  validate.sh
